# RZEmulator

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  ISSUE_TEMPLATE.md  LICENSE  README.md  appveyor.yml  conanfile.txt  revision.h.in.cmake  vcpkg.json
Chihiro/: CMakeLists.txt  chihiro.conf  chihiro.conf.dist
Chihiro/src/: Declarations.h  Main.cpp
Chihiro/src/Account/: AllowedCommandInfo.cpp  AllowedCommandInfo.h
Chihiro/src/Crafting/: MixManager.cpp  MixManager.h
Chihiro/src/Dungeons/: DungeonManager.cpp  DungeonManager.h
Chihiro/src/Functors/: Functors.cpp  Functors.h
Chihiro/src/Globals/: DatabaseTemplates.h  Functors.cpp  Functors.h  GameContent.cpp  GameContent.h  GameRule.cpp  GameRule.h  MemPool.cpp  MemPool.h  Messages.cpp  Messages.h  ObjectMgr.cpp  ObjectMgr.h
Chihiro/src/Groups/: GroupManager.cpp  GroupManager.h
Chihiro/src/Map/: ArRegion.cpp  ArRegion.h  MapLocationInfo.h  Maploader.cpp  Maploader.h  Region.cpp  Region.h  RegionBlock.h  RegionContainer.cpp  RegionContainer.h  RegionTester.cpp  RegionTester.h  TerrainPropInfo.cpp  TerrainPropInfo.h  TerrainSeamlessWorld.cpp  TerrainSeamlessWorld.h  WorldLocation.cpp  WorldLocation.h
Chihiro/src/Network/: AuthNetwork.cpp  AuthNetwork.h  AuthSession.h  Messages.cpp  Messages.h
Chihiro/src/PrecompiledHeaders/: chihiroPCH.cpp  chihiroPCH.h
Chihiro/src/Quests/: Quest.cpp  Quest.h  QuestBase.h  QuestManager.cpp  QuestManager.h
Chihiro/src/Scripting/: XLua.cpp  XLua.h
Chihiro/src/Skills/: Skill.cpp  Skill.h  SkillBase.cpp  SkillBase.h  SkillFunctor.h  State.cpp  State.h  StateBase.h
Chihiro/src/World/: AllowedCommandInfo.cpp  AllowedCommandInfo.h  CliThread.cpp  CliThread.h  World.cpp  World.h  WorldRunnable.cpp  WorldRunnable.h
Chihiro/src/X2D/: Boxf.cpp  Boxf.h  Linef.cpp  Linef.h  MapLocationInfo.h  Pointf.cpp  Pointf.h  PolygonF.cpp  PolygonF.h  QuadTreeMapInfo.cpp  QuadTreeMapInfo.h  QuadTreeMli.cpp  QuadTreeMli.h  RectangleF.cpp  RectangleF.h
Mononoke/: CMakeLists.txt  authserver.conf  mononoke.conf.dist
Mononoke/src/: Main.cpp
Mononoke/src/Lists/: GameList.h  PlayerList.h
Mononoke/src/PrecompiledHeaders/: mononokePCH.cpp  mononokePCH.h
Mononoke/src/Server/: XSocket.h
Shizue/: CMakeLists.txt
Shizue/src/: Main.cpp
Shizue/src/Session/: ShizukeSession.cpp  ShizukeSession.h
Tools/Luna/: CMakeLists.txt
Tools/Luna/src/: Main.cpp
Tools/NGRDB/: CMakeLists.txt
Tools/NGRDB/src/: Main.cpp
Tools/ServerMonitor/: CMakeLists.txt
Tools/ServerMonitor/src/: Main.cpp  MonitorStructs.h
shared/: AutoPtr.h  CMakeLists.txt  Callback.h  Common.h  CompilerDefs.h  Define.h  README.md  SystemConfigs.h
shared/Asio/: AsioHacksFwd.h  IoContext.h  IpAddress.h  IpNetwork.h  Resolver.h  Strand.h
shared/Common/: Common.h  CompilerDefs.h  Define.h  NGInit.h
shared/Configuration/: Config.cpp  Config.h
shared/Database/: AdhocStatement.cpp  AdhocStatement.h  DatabaseEnv.cpp  DatabaseEnv.h  DatabaseEnvFwd.h  DatabaseLoader.cpp  DatabaseLoader.h  DatabaseWorker.cpp  DatabaseWorker.h  DatabaseWorkerPool.cpp  DatabaseWorkerPool.h  Field.cpp  Field.h  MySQLConnection.cpp  MySQLConnection.h  MySQLThreading.cpp  MySQLThreading.h  PreparedStatement.cpp  PreparedStatement.h  QueryCallback.cpp  QueryCallback.h  QueryCallbackProcessor.cpp  QueryCallbackProcessor.h  QueryHolder.cpp  QueryHolder.h  QueryResult.cpp  QueryResult.h  SQLOperation.h  Transaction.cpp  Transaction.h
shared/Database/Implementation/: CharacterDatabase.cpp  CharacterDatabase.h  GameDatabase.cpp  GameDatabase.h  LogDatabase.cpp  LogDatabase.h  LoginDatabase.cpp  LoginDatabase.h
shared/Debugging/: Errors.cpp  Errors.h  Stacktrace.cpp  Stacktrace.h
shared/Dynamic/: HashMapHolder.h  LinkedList.h  ObjectRegistry.h  SharedMutex.h  TypeContainer.h  TypeContainerFunctions.h  TypeContainerFunctionsPtr.h
shared/Encryption/: AES.cpp  AES.h  ByteBuffer.cpp  ByteBuffer.h  MD5.cpp  MD5.h  RSACipher.cpp  RSACipher.h  XDes.cpp  XDes.h  XRc4Cipher.cpp  XRc4Cipher.h  rc4_cipher.h
shared/Encryption/cipher/: SimpleCipher.h  XStrZlibWithSimpleCipherUtil.h  ZLibEncoder.h
shared/Logging/: Appender.cpp  Appender.h  AppenderConsole.cpp  AppenderConsole.h  AppenderFile.cpp  AppenderFile.h  Log.cpp  Log.h  LogCommon.h  LogMessage.cpp  LogMessage.h  LogOperation.cpp  LogOperation.h  Logger.cpp  Logger.h
shared/PrecompiledHeaders/: sharedPCH.h
shared/Server/: ClientPackets.h  TS_MESSAGE.h  WorldSocket.cpp  WorldSocket.h  WorldSocketAcceptor.h  WorldSocketMgr.cpp  WorldSocketMgr.h  XPacket.h  XSocket.cpp  XSocket.h
shared/Server/ASIO/: AsyncAcceptor.cpp  AsyncAcceptor.h  MessageBuffer.cpp  MessageBuffer.h  NetworkThread.cpp  NetworkThread.h  SingleSocketInstance.cpp  SingleSocketInstance.h  Socket.h  SocketMgr.cpp  SocketMgr.h  XSocket.cpp  XSocket.h  XSocketMgr.h  XSocketMgrHandler.h  XSocketThread.h
shared/Server/GameClient/: TS_CS_ACCOUNT_WITH_AUTH.h  TS_CS_ANTI_HACK.h  TS_CS_ARRANGE_ITEM.h  TS_CS_ATTACK_REQUEST.h  TS_CS_AUCTION_BID.h  TS_CS_AUCTION_BIDDED_LIST.h  TS_CS_AUCTION_CANCEL.h  TS_CS_AUCTION_INSTANT_PURCHASE.h  TS_CS_AUCTION_REGISTER.h  TS_CS_AUCTION_SEARCH.h  TS_CS_AUCTION_SELLING_LIST.h  TS_CS_BATTLE_ARENA_ABSENCE_CHECK_ANSWER.h  TS_CS_BATTLE_ARENA_ABSENCE_CHECK_REQUEST.h  TS_CS_BATTLE_ARENA_ENTER_WHILE_COUNTDOWN.h  TS_CS_BATTLE_ARENA_EXERCISE_READY.h  TS_CS_BATTLE_ARENA_EXERCISE_START.h  TS_CS_BATTLE_ARENA_JOIN_QUEUE.h  TS_CS_BATTLE_ARENA_LEAVE.h  TS_CS_BIND_SKILLCARD.h  TS_CS_BOOKMARK_TITLE.h  TS_CS_BUY_FROM_BOOTH.h  TS_CS_BUY_ITEM.h  TS_CS_CANCEL_ACTION.h  TS_CS_CHANGE_ALIAS.h  TS_CS_CHANGE_ITEM_POSITION.h  TS_CS_CHANGE_LOCATION.h  TS_CS_CHANGE_SUMMON_NAME.h  TS_CS_CHARACTER_LIST.h  TS_CS_CHAT_REQUEST.h  TS_CS_CHECK_ILLEGAL_USER.h  (+244 more)
shared/Threading/: LockedQueue.h  MPSCQueue.h  ProcessPriority.cpp  ProcessPriority.h  ProducerConsumerQueue.h
shared/Utilities/: ByteConverter.h  EventProcessor.cpp  EventProcessor.h  ServiceWin32.cpp  ServiceWin32.h  SignalHandler.h  StringFormat.h  Timer.h  Util.cpp  Util.h
shared/utf8/: checked.h  core.h  randomc.h  unchecked.h  utf8.h
(+494 files in other folders)
